Changes for Perl extension PPIx-EditorTools

0.10 to be released
	- Fixed Padre ticket #655: Can't rename to a variable with an underscore
	  in it (PATRICKAS)

0.09 2009.09.19
	- Fixed Padre ticket:504 and ticket:586 which is basically about being
	  able to rename a variable when the cursor is over its  declaration 
	  (AZAWAWI)
	- Refactored code a bit and removed some dead code (AZAWAWI)
	- Fixed one passing TODO test in t/06-renamevariable.t (AZAWAWI)
	- Added a test to t/02-findvariabledeclaration.t to make sure this fix 
	  works in the future (AZAWAWI)

0.08 2009.08.05
	- updated location tests to work with the PPI v1.205 (RT#48449) (MGRIMES)
	- removed the INSTALL file: bad copyright and old install instuctions

0.07 2009.07.21
	- skip tests if PPI version includes an underscore _ (SZABGAB)

0.06 2009.07.11
	- fix MANIFEST.SKIP

0.05 2009.07.07
	- Switch Changes to be more machine parsable (ADAMK)
	- Added dependency versions
	- Removed needless 5.10 dependency that wasn't reflected in the code
	- Switched to Module::Install to auto-detect config from the code

0.04 2009.06.25
	- Added Changes file
	- Removed MANIFEST and META.yml from repository